changed the folder for the background image in style.css

--- a/styles/style.css
+++ b/styles/style.css
@@ -106,7 +106,7 @@ main{
     width: 40%;
     /* background-color: azure; */
     padding: 20px 20px 20px 0px;
-    background-image: url("./home-animation.svg");
+    background-image: url("../images/home-animation.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
